# retrieva

./: .claude.md  .env.example  .gitignore  .vercelignore  Dockerfile  LICENSE  README.md  alembic.ini  cahier-des-charges-rag-platform.md  config.example.yaml  docker-compose.yml  pyproject.toml  vercel.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_collection_permissions.py  003_add_widgets.py  004_add_subscriptions.py
api/: database.py  main.py
api/auth/: __init__.py  api_keys.py  jwt.py  permissions.py
api/middleware/: __init__.py  logging.py  rate_limit.py
api/models/: __init__.py  api_key.py  chunk.py  collection.py  collection_permission.py  connector_source.py  document.py  query_log.py  subscription.py  tenant.py  user.py  webhook.py  widget_config.py
api/routes/: __init__.py  activity.py  admin.py  analytics_dashboard.py  billing.py  collections.py  compare.py  documents.py  eval.py  ingest.py  plugins.py  query.py  setup.py  sources.py  suggestions.py  templates.py  widget.py  widget_admin.py
api/schemas/: __init__.py  activity.py  admin.py  analytics_dashboard.py  auth.py  billing.py  collection.py  compare.py  document.py  ingest.py  plugin.py  query.py  setup.py  suggestions.py  template.py  widget.py
cli/: README.md  package.json
cli/templates/chatbot-fullpage/: styles.css
cli/templates/faq-bot/: index.html
cli/templates/search-portal/: styles.css
core/: config.py  exceptions.py  vector_store.py  webhooks.py
core/cli/: __init__.py
core/cli/commands/: plugin.py  setup.py
core/connectors/: __init__.py  base.py  confluence.py  file_upload.py  github_connector.py  google_drive.py  notion.py  postgres.py  postgres_connector.py  rest_api.py  s3.py  slack.py  url_crawler.py
core/generation/: __init__.py  engine.py  guardrails.py
core/generation/prompts/: __init__.py  default.py
core/ingestion/: pipeline.py
core/ingestion/chunkers/: __init__.py  base.py  document.py  fixed.py  semantic.py
core/ingestion/embedders/: __init__.py  base.py  cohere.py  local.py  openai.py
core/ingestion/extractors/: __init__.py  base.py  docx.py  excel.py  html.py  pdf.py  text.py
core/ingestion/transformers/: __init__.py  base.py  deduplicator.py  html_cleaner.py  metadata_enricher.py
core/plugin_system/: __init__.py  discovery.py  hooks.py  loader.py  manager.py  manifest.py  protocols.py  registry.py
core/retrieval/: __init__.py  engine.py  filters.py  multi_query.py  reranker.py
dashboard/: Dockerfile  next.config.js  package.json  tailwind.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: command-palette.tsx  keyboard-shortcuts.tsx  onboarding-tour.tsx  plugin-config-panel.tsx  sidebar.tsx  stats-card.tsx  upgrade-banner.tsx
dashboard/src/lib/: api.ts  auth-context.tsx  feature-flags.ts  utils.ts
docs/: api-reference.md  configuration.md  connectors.md  deployment.md  getting-started.md
landing/: layout.tsx  page.tsx
plugins/: marketplace.json  registry.json
plugins/chunkers/document/: plugin.py  plugin.yaml
plugins/chunkers/fixed/: plugin.py  plugin.yaml
plugins/chunkers/semantic/: plugin.py  plugin.yaml
plugins/connectors/confluence/: plugin.py  plugin.yaml
plugins/connectors/file-upload/: plugin.py  plugin.yaml
plugins/connectors/github/: plugin.py  plugin.yaml
plugins/connectors/google-drive/: plugin.py  plugin.yaml
plugins/connectors/notion/: plugin.py  plugin.yaml
plugins/connectors/postgres/: plugin.py  plugin.yaml
plugins/connectors/rest-api/: plugin.py  plugin.yaml
plugins/connectors/s3/: plugin.py  plugin.yaml
plugins/connectors/slack/: plugin.py  plugin.yaml
plugins/connectors/url-crawler/: plugin.py  plugin.yaml
plugins/embedders/cohere/: plugin.py  plugin.yaml
plugins/embedders/local/: plugin.py  plugin.yaml
plugins/embedders/openai/: plugin.py  plugin.yaml
plugins/extractors/docx/: plugin.py  plugin.yaml
plugins/extractors/excel/: plugin.py  plugin.yaml
plugins/extractors/html/: plugin.py  plugin.yaml
plugins/extractors/pdf/: plugin.py  plugin.yaml
plugins/extractors/text/: plugin.py  plugin.yaml
plugins/generators/anthropic/: plugin.py  plugin.yaml
sdks/js/: README.md  package.json  tsconfig.json
sdks/python/: README.md  pyproject.toml
sdks/python/retrieva/: __init__.py  async_client.py  client.py  errors.py  types.py  widget.py
sdks/python/retrieva/resources/: __init__.py  collections.py  ingest.py  query.py  search.py
templates/: README.md
templates/chatbot-fullpage/: app.js  index.html  manifest.json
templates/faq-bot/: app.js  manifest.json  styles.css
templates/search-portal/: app.js  index.html  manifest.json
tests/: conftest.py
tests/e2e/: test_api_e2e.py
tests/integration/: test_ingestion_flow.py  test_query_flow.py
website/: package-lock.json  package.json  tailwind.config.ts
workers/: celery_app.py  db.py  ingestion_worker.py  sync_worker.py
(+89 files in other folders)
