[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retrieva"
version = "0.1.0"
description = "Python SDK for the Retrieva RAG platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Retrieva", email = "support@retrieva.io" },
]
keywords = ["retrieva", "rag", "retrieval", "ai", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://retrieva.io"
Documentation = "https://docs.retrieva.io"
Repository = "https://github.com/retrieva/retrieva-python"

[tool.hatch.build.targets.wheel]
packages = ["retrieva"]
